First segment items

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
-  <html class="no-js" lang="fa-IR" dir="rtl">
-
+<html lang="fa-IR" dir="rtl">
 <head>
   <meta charset="utf-8">
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="scss/main.scss">
+  <link rel="stylesheet" href="css/main.css">
 
 </head>
 
@@ -23,19 +22,29 @@
   <div class="collapse  navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link nav-link-grow-up" href="#">معرفی <span class="sr-only">(current)</span></a>
+        <a class="nav-link nav-link-grow-up" href="#">
+          معرفی <span class="sr-only">(current)</span>
+        </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link nav-link-grow-up" href="#">ویژگی‌ها</a>
+        <a class="nav-link nav-link-grow-up" href="#">
+          ویژگی‌ها
+        </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link nav-link-grow-up" href="#">مزیت‌های ازکی</a>
+        <a class="nav-link nav-link-grow-up" href="#">
+          مزیت‌های ازکی
+        </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link nav-link-grow-up" href="#">بیمه تکمیلی</a>
+        <a class="nav-link nav-link-grow-up" href="#">
+          بیمه تکمیلی
+        </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link nav-link-grow-up" href="#">انواع بیمه‌ها</a>
+        <a class="nav-link nav-link-grow-up" href="#">
+          انواع بیمه‌ها
+        </a>
       </li>
     </ul>
     <button class="btn my-2 my-sm-0 consult-btn">درخواست مشاوره</button>
