--- a/src/index2.html
+++ b/src/index2.html
@@ -12,48 +12,82 @@
 <body>
 
 <div class="landing-background">
-  <nav class="navbar navbar-expand-sm navbar-dark bg-transparent shadow">
-    <div class="container justify-content-start">
+  <div class="gradient">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-transparent shadow">
+      <div class="container justify-content-start">
 
-      <a class="navbar-brand" href="#">Azki.com</a>
+        <a class="navbar-brand" href="#">
+          <span class="icon-logo"></span>
 
-      <div class="navbar-nav ">
-        <a class="nav-item nav-link active" href="#">معرفی <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">ویژگی‌ها</a>
-        <a class="nav-item nav-link" href="#">مزیت‌های ازکی</a>
-        <a class="nav-item nav-link " href="#">بیمه تکمیلی</a>
-        <a class="nav-item nav-link " href="#">انواع بیمه‌ها</a>
+        </a>
+
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">معرفی <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">ویژگی‌ها</a>
+          <a class="nav-item nav-link" href="#">مزیت‌های ازکی</a>
+          <a class="nav-item nav-link" href="#">بیمه تکمیلی</a>
+          <a class="nav-item nav-link" href="#">انواع بیمه‌ها</a>
+        </div>
+
+        <div class="mr-auto">
+
+          <a class="text-light" href="#">
+            <span class="icon-headset"></span>
+            ۰۲۱-۵۴۸۶۴
+          </a>
+
+
+          <button type="button" class="btn btn-primary">درخواست مشاوره</button>
+
+        </div>
+
+      </div>
+    </nav>
+
+    <div class="container">
+
+      <div class="row description">
+
+        <div class="col align-self-center">
+
+          <h2>بیمه سازمانی</h2>
+          <h1>درمان تکمیلی</h1>
+          <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
+            چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است.</p>
+          <button type="button" class="btn btn-primary">دریافت بیمه</button>
+
+        </div>
+        <div class="col"></div>
       </div>
 
-      <div class="mr-auto">
 
-        <a class="text-light" href="#">۰۲۱-۵۴۸۶۴</a>
-
-        <button type="button" class="btn btn-primary">درخواست مشاوره</button>
-
+      <div class="row categories">
+        <a class="category-item active" href="#">
+          <span class="category-icon icon-first-aid-kit"></span>
+          <span class="category-text">درمان تکمیلی</span>
+        </a>
+        <a class="category-item" href="#">
+          <span class="category-icon icon-cardiology"></span>
+          <span class="category-text">عمر و حوادث</span>
+        </a>
+        <a class="category-item" href="#">
+          <span class="category-icon icon-suitcase"></span>
+          <span class="category-text">مسولیت</span>
+        </a>
+        <a class="category-item" href="#">
+          <span class="category-icon icon-businessman"></span>
+          <span class="category-text">مهندسی و برق</span>
+        </a>
+        <a class="category-item" href="#">
+          <span class="category-icon icon-delivery-truck"></span>
+          <span class="category-text">باربری</span>
+        </a>
+        <a class="category-item" href="#">
+          <span class="category-icon icon-fire"></span>
+          <span class="category-text">آتش سوزی</span>
+        </a>
       </div>
-
     </div>
-  </nav>
-
-  <div class="container">
-
-    <div class="row description">
-
-      <div class="col align-self-center">
-
-        <h2>بیمه سازمانی</h2>
-        <h1>درمان تکمیلی</h1>
-        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
-          چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است.</p>
-        <button type="button" class="btn btn-primary">دریافت بیمه</button>
-
-      </div>
-      <div class="col"></div>
-
-    </div>
-    <div class="row categories border"></div>
-
   </div>
 </div>
 
