Navbar underline and fixed position done

--- a/src/index2.html
+++ b/src/index2.html
@@ -5,7 +5,6 @@
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -13,7 +12,7 @@
 
 <div class="landing-background">
   <div class="gradient">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-transparent shadow">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-transparent shadow fixed-top">
       <div class="container justify-content-start">
 
         <a class="navbar-brand" href="#">
@@ -22,16 +21,16 @@
         </a>
 
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">معرفی <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">ویژگی‌ها</a>
-          <a class="nav-item nav-link" href="#">مزیت‌های ازکی</a>
-          <a class="nav-item nav-link" href="#">بیمه تکمیلی</a>
-          <a class="nav-item nav-link" href="#">انواع بیمه‌ها</a>
+          <a class="nav-item nav-link nav-link-grow-up active" href="#">معرفی <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link nav-link-grow-up" href="#">ویژگی‌ها</a>
+          <a class="nav-item nav-link nav-link-grow-up" href="#">مزیت‌های ازکی</a>
+          <a class="nav-item nav-link nav-link-grow-up" href="#">بیمه تکمیلی</a>
+          <a class="nav-item nav-link nav-link-grow-up" href="#">انواع بیمه‌ها</a>
         </div>
 
         <div class="mr-auto">
 
-          <a class="text-light" href="#">
+          <a class="text-light call-info" href="#">
             <span class="icon-headset"></span>
             ۰۲۱-۵۴۸۶۴
           </a>
@@ -48,13 +47,13 @@
 
       <div class="row description">
 
-        <div class="col align-self-center">
+        <div class="col align-self-center text-light description-text">
 
           <h2>بیمه سازمانی</h2>
           <h1>درمان تکمیلی</h1>
           <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
             چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است.</p>
-          <button type="button" class="btn btn-primary">دریافت بیمه</button>
+          <button type="button" class="btn btn-secondary">دریافت بیمه</button>
 
         </div>
         <div class="col"></div>
@@ -94,6 +93,8 @@
 
 <script src="../node_modules/jquery/dist/jquery.min.js"></script>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="./main.js"></script>
+
 </body>
 
 </html>
