5th segment completed

--- a/src/index2.html
+++ b/src/index2.html
@@ -8,86 +8,450 @@
   <link rel="stylesheet" href="css/main.css">
 
 </head>
-<body>
-
-<div class="landing-background">
-  <div class="gradient">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-transparent shadow fixed-top">
-      <div class="container justify-content-start">
-
-        <a class="navbar-brand" href="#">
-          <span class="icon-logo"></span>
-
-        </a>
-
-        <div class="navbar-nav">
-          <a class="nav-item nav-link nav-link-grow-up active" href="#">معرفی <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link nav-link-grow-up" href="#">ویژگی‌ها</a>
-          <a class="nav-item nav-link nav-link-grow-up" href="#">مزیت‌های ازکی</a>
-          <a class="nav-item nav-link nav-link-grow-up" href="#">بیمه تکمیلی</a>
-          <a class="nav-item nav-link nav-link-grow-up" href="#">انواع بیمه‌ها</a>
-        </div>
-
-        <div class="mr-auto">
-
-          <a class="text-light call-info" href="#">
-            <span class="icon-headset"></span>
-            ۰۲۱-۵۴۸۶۴
-          </a>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 
 
-          <button type="button" class="btn btn-primary">درخواست مشاوره</button>
+<nav class="navbar main-nav navbar-expand-sm bg-transparent shadow fixed-top">
+  <div class="container justify-content-start">
 
-        </div>
+    <a class="navbar-brand" href="#">
+      <span class="icon-logo"></span>
+
+    </a>
+
+    <div class="navbar-nav">
+      <a class="nav-item nav-link nav-link-grow-up active" href="#section1">معرفی <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link nav-link-grow-up" href="#section2">ویژگی‌ها</a>
+      <a class="nav-item nav-link nav-link-grow-up" href="#section3">مزیت‌های ازکی</a>
+      <a class="nav-item nav-link nav-link-grow-up" href="#section4">بیمه تکمیلی</a>
+      <a class="nav-item nav-link nav-link-grow-up" href="#section5">انواع بیمه‌ها</a>
+    </div>
+
+    <div class="mr-auto">
+
+      <a class="text-light call-info" href="#">
+        <span class="icon-headset"></span>
+        ۰۲۱-۵۴۸۶۴
+      </a>
+
+
+      <button type="button" class="btn btn-primary shadow">درخواست مشاوره</button>
+
+    </div>
+
+  </div>
+</nav>
+
+
+<div class="landing-background lb1" id="section1">
+
+  <div class="container">
+
+    <div class="row description">
+
+      <div class="col align-self-center text-light description-text">
+
+        <h2>بیمه سازمانی</h2>
+        <h1>درمان تکمیلی</h1>
+        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
+          چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است.</p>
+        <button type="button" class="btn btn-secondary">دریافت بیمه</button>
 
       </div>
-    </nav>
 
-    <div class="container">
+      <div class="col">
 
-      <div class="row description">
-
-        <div class="col align-self-center text-light description-text">
-
-          <h2>بیمه سازمانی</h2>
-          <h1>درمان تکمیلی</h1>
-          <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
-            چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است.</p>
-          <button type="button" class="btn btn-secondary">دریافت بیمه</button>
-
-        </div>
-        <div class="col"></div>
       </div>
 
+    </div>
 
-      <div class="row categories">
-        <a class="category-item active" href="#">
-          <span class="category-icon icon-first-aid-kit"></span>
-          <span class="category-text">درمان تکمیلی</span>
-        </a>
-        <a class="category-item" href="#">
-          <span class="category-icon icon-cardiology"></span>
-          <span class="category-text">عمر و حوادث</span>
-        </a>
-        <a class="category-item" href="#">
-          <span class="category-icon icon-suitcase"></span>
-          <span class="category-text">مسولیت</span>
-        </a>
-        <a class="category-item" href="#">
-          <span class="category-icon icon-businessman"></span>
-          <span class="category-text">مهندسی و برق</span>
-        </a>
-        <a class="category-item" href="#">
-          <span class="category-icon icon-delivery-truck"></span>
-          <span class="category-text">باربری</span>
-        </a>
-        <a class="category-item" href="#">
-          <span class="category-icon icon-fire"></span>
-          <span class="category-text">آتش سوزی</span>
-        </a>
-      </div>
+
+    <div class="row categories">
+      <a class="category-item active" href="#">
+        <span class="category-icon icon-first-aid-kit"></span>
+        <span class="category-text">درمان تکمیلی</span>
+      </a>
+      <a class="category-item" href="#">
+        <span class="category-icon icon-cardiology"></span>
+        <span class="category-text">عمر و حوادث</span>
+      </a>
+      <a class="category-item" href="#">
+        <span class="category-icon icon-suitcase"></span>
+        <span class="category-text">مسولیت</span>
+      </a>
+      <a class="category-item" href="#">
+        <span class="category-icon icon-businessman"></span>
+        <span class="category-text">مهندسی و برق</span>
+      </a>
+      <a class="category-item" href="#">
+        <span class="category-icon icon-delivery-truck"></span>
+        <span class="category-text">باربری</span>
+      </a>
+      <a class="category-item" href="#">
+        <span class="category-icon icon-fire"></span>
+        <span class="category-text">آتش سوزی</span>
+      </a>
     </div>
   </div>
+
+</div>
+
+<div class="landing-background lb2" id="section2">
+
+  <div class="container">
+
+    <div class="row description">
+
+      <div class="col description-text text-dark">
+
+        <h2>بیمه‌های سازمانی</h2>
+        <p>هر شرکت و سازمان برای مدیریت ریسک و رفاه کارمندان خود به بیمه‌های مختلفی نیاز دارد. به همین دلیل ازکی به
+          عنوان مرکز مشاوره و انتخاب بیمه علاوه بر ارائه خدمات در زمینه انواع بیمه‌های انفرادی، بیمه‌های سازمانی را هم
+          به شرکت‌ها و سازمان‌ها با هر تعدادی ارائه کرده است. بیمه‌هایی مثل عمر و حوادث، درمان تکمیلی، مسئولیت، مهندسی
+          و
+          الکترونیک، باربری و آتش سوزی</p>
+      </div>
+
+    </div>
+    <div class="row properties">
+      <div class="col first">
+        <h6>
+          این نوع بیمه به دو منظور
+          خریداری می‌شود :
+        </h6>
+        <div class="text-bg rounded text-light bg-primary shadow">
+          <div class="heading-bg rounded">
+            <h1>۱
+            </h1>
+          </div>
+          <p>
+            مدیریت هزینه‌ خسارت‌هایی که بر اثر حادثه‌ای برای شرکت ممکن است به وجود بیاید مانند آتش سوزی یا خسارت در
+            زمان
+            حمل و نقل کالا. در این صورت می‌توان از بیمه‌های سازمانی مانند بیمه آتش سوزی و باربری استفاده کرد.
+          </p>
+        </div>
+      </div>
+      <div class="col second">
+        <div class="text-bg rounded text-dark bg-secondary shadow">
+          <div class="heading-bg rounded">
+            <h1>۲
+            </h1>
+          </div>
+          <p>مدیریت هزینه خسارت‌هایی که برای کارکنان آن سازمان به وجود بیاید. مانند فوت، از کارافتادگی یا قطع اعضای
+            بدن
+            و ... در این صورت هم از بیمه‌های سازمانی از جمله عمر، مسئولیت مدنی و درمان تکمیلی می‌توان استفاده کرد</p>
+        </div>
+      </div>
+      <div class="col third"></div>
+
+    </div>
+  </div>
+
+</div>
+
+<div class="landing-background lb3" id="section3">
+
+  <div class="container">
+
+    <div class="row advantages">
+
+      <div class="col first">
+
+        <div class="text">
+
+          <h3>
+            چرا ازکی ؟
+          </h3>
+          <p>
+            مزیت های ما نسبت به سایر رقبا
+          </p>
+
+        </div>
+
+        <div class="text-bg rounded text-dark bg-secondary shadow">
+
+          <span class="icon-documents"></span>
+
+          <h5>
+            مقایسه بیمه ها
+          </h5>
+
+          <p>
+            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم برای طراحان گرافیک است
+          </p>
+        </div>
+
+      </div>
+
+      <div class="col second">
+
+        <div class="text-bg tb1 rounded text-primary bg-white shadow">
+
+          <span class="icon-headset"></span>
+
+          <h5>
+            مشاوره‌ رایگان
+          </h5>
+
+          <p>
+            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم برای طراحان گرافیک است
+          </p>
+        </div>
+
+        <div class="text-bg tb2 rounded text-primary bg-white shadow">
+
+          <span class="icon-search1"></span>
+
+          <h5>
+            آنالیز خسارت
+          </h5>
+
+          <p>
+            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم برای طراحان گرافیک است
+          </p>
+        </div>
+
+      </div>
+
+      <div class="col third">
+
+
+        <div class="text-bg tb1 rounded text-primary bg-white shadow">
+
+          <span class=""></span>
+
+          <h5>
+            خدمات ویژه
+          </h5>
+
+          <p>
+            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم برای طراحان گرافیک است
+          </p>
+        </div>
+
+        <div class="text-bg tb2 rounded text-light  shadow">
+
+          <span class="icon-shopping-cart"></span>
+
+          <h5>
+            پرداخت آنلاین
+          </h5>
+
+          <p>
+            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم برای طراحان گرافیک است
+          </p>
+        </div>
+
+
+      </div>
+
+      <div class="col fourth"></div>
+
+    </div>
+
+  </div>
+
+</div>
+
+<div class="landing-background lb4" id="section4">
+
+  <div class="container">
+
+    <div class="row supplementary">
+
+      <div class="col first">
+
+        <div class="text">
+
+          <h3>
+            درمان تکمیلی
+          </h3>
+
+          <p>
+            بیشتر شرکت‌های بیمه محدودیت‌هایی برای ارائه بیمه سازمانی در نظر می‌گیرند. به عنوان مثال برای شرکت‌ها و
+            سازمان‌های کوچک و با کمتر از 50 نفر متقاضی بیمه، بیمه تکمیلی سازمانی ارائه نمی‌شود.
+          </p>
+
+          <p>
+            اما در حال حاضر ازکی با ارائه طرح‌های ویژه بیمه تکمیلی سازمانی از شرکت‌های معتبر بیمه، شرایط منحصر به فردی
+            برای عرضه این بیمه نامه به شرکت‌ها و سازمان‌های مختلف (از جمله شرکت‌های کمتر از 50 نفر) در نظر گرفته است. به
+            این معنی که ازکی برای شرکت شما با هر شرایط و هر تعداد پرسنل، طرح مناسب و ویژه بیمه تکمیلی پیشنهاد و ارائه
+            می‌دهد.
+          </p>
+
+
+        </div>
+
+
+      </div>
+
+      <div class="col second">
+
+        <div class="form-bg shadow d-flex align-items-center">
+
+          <form class="container">
+
+            <div class="form-group row">
+
+              <input type="email" class="form-control form-control-lg" placeholder="نام و نام خانوادگی">
+
+            </div>
+
+            <div class="form-group row">
+
+              <input type="password" class="form-control form-control-lg" placeholder="تلفن همراه">
+
+            </div>
+
+            <div class="form-group row">
+
+              <input type="password" class="form-control form-control-lg" placeholder="نام شرکت / سازمان">
+
+            </div>
+
+            <div class="form-group row">
+
+              <input type="password" class="form-control form-control-lg" placeholder="تعداد پرسنل">
+
+            </div>
+
+
+            <div class="form-group row">
+
+              <input type="password" class="form-control form-control-lg" placeholder="تعداد افراد تحت تکفل">
+
+            </div>
+
+            <div class="row">
+
+              <button type="submit" class="btn-lg btn-primary btn-block">استعلام قیمت</button>
+
+            </div>
+
+          </form>
+        </div>
+
+      </div>
+
+      <div class="col third"></div>
+
+    </div>
+
+  </div>
+
+</div>
+
+<div class="landing-background lb5" id="section5">
+
+  <div class="container-fluid bg-primary first">
+
+
+    <div class="row logo justify-content-center align-items-center">
+
+      <span class="icon-logo"></span>
+
+    </div>
+
+    <div class="row categories justify-content-center align-items-end">
+      <a class="category-item active" href="#">
+        <span class="category-icon icon-first-aid-kit"></span>
+        <span class="category-text">درمان تکمیلی</span>
+      </a>
+      <a class="category-item" href="#">
+        <span class="category-icon icon-cardiology"></span>
+        <span class="category-text">عمر و حوادث</span>
+      </a>
+      <a class="category-item" href="#">
+        <span class="category-icon icon-suitcase"></span>
+        <span class="category-text">مسولیت</span>
+      </a>
+      <a class="category-item" href="#">
+        <span class="category-icon icon-businessman"></span>
+        <span class="category-text">مهندسی و برق</span>
+      </a>
+      <a class="category-item" href="#">
+        <span class="category-icon icon-delivery-truck"></span>
+        <span class="category-text">باربری</span>
+      </a>
+      <a class="category-item" href="#">
+        <span class="category-icon icon-fire"></span>
+        <span class="category-text">آتش سوزی</span>
+      </a>
+
+    </div>
+
+
+  </div>
+
+  <div class="row second">
+
+    <form>
+      <div class="row">
+        <div class="col">
+
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="نام و نام خانوادگی">
+          </div>
+
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="نام شرکت / سازمان">
+          </div>
+
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="تعداد افراد تحت تکفل">
+          </div>
+
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="تلفن همراه">
+          </div>
+
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="تعداد پرسنل">
+          </div>
+
+          <button type="submit" class="btn btn-primary btn-block">ارسال مشخصات</button>
+
+        </div>
+      </div>
+    </form>
+
+  </div>
+
+  <div class="row third footer">
+
+    <div class="row header text-white justify-content-center">
+      <h4>
+        با ما در ارتباط باشید
+      </h4>
+    </div>
+
+    <div class="row contact text-white">
+
+      <div class="col d-flex justify-content-end">
+        <p class="phone">
+          ۰۲۱-۵۴۸۶۴
+        </p>
+        <span class="icon-phone-call"></span>
+      </div>
+
+      <div class="col d-flex justify-content-start">
+        <span class="icon-pin"></span>
+        <p class="address">
+          تهران، خیابان وزرا، خیابان هفتم
+          پلاک 7 (ساختمان ماموت)
+        </p>
+
+      </div>
+
+    </div>
+
+  </div>
+
+
+</div>
+
 </div>
 
 
