Prepared to be deployed on github pages

--- a/index.html
+++ b/index.html
@@ -455,9 +455,9 @@
 </div>
 
 
-<script src="../node_modules/jquery/dist/jquery.min.js"></script>
-<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="./main.js"></script>
+<script src="node_modules/jquery/dist/jquery.min.js"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="main.js"></script>
 
 </body>
 
